--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
     display: flex;
     flex-direction: column;
     padding-top: 2em;
+    padding-right: 3em;
 }
 .dashBorde{
     width: 80%;
@@ -51,7 +52,8 @@ span{
     gap: 20px;
    justify-content: space-around;
    justify-self: center;
-   margin: 3em 5em;
+   margin: 3em auto;
+   padding-right: 2em;
 }
 .sq {
     width: 7rem;
@@ -70,4 +72,25 @@ span{
     cursor: pointer;
 
     flex-shrink: 0;       /* يمنع التصغير */
+}
+@media (max-width: 768px){
+.game{
+    width: 80vw;
+    height: 100vh;
+    margin: 0 1em;
+}    
+.main{margin: 3em auto;}
+}
+@media (max-width: 480px){
+   .game{
+    width: 100vw;
+    height: 100vh;
+    margin: 0 1em;
+   }
+.main{
+    margin: 3em auto;}
+    .sq{
+        width: 5rem;
+        height: 5rem;
+    }
 }
